[Task Manager] Optimize parent process CGroup check

There's no need to update all processes when we can just explicitly add
info about the parent process.

BUG: 437259
FIXED-IN: 5.22.0


(cherry picked from commit 7bfb5570eb0f3434eceb6641cb796573bf93b9f7)